Ensure the mode used to create split registers is suppported

gcc/
	PR target/78012
	* lra-constraints.c (split_reg): Check requested split mode
	is supported by the register.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245601 138bc75d-0d04-0410-961f-82ee72b054a4